cover.css
/*
 * Globals
 */

/* Links */
/* a,
a:focus,
a:hover {
  color: #fff;
} */
a {
    font-family: Varela Round, arial, sans-serif;
    font-weight: normal;
    font-family: "Lato";
    font-size: 12px;
    line-height: 2em;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 3px;
    font-weight: 400;
    font-style: normal;
    color:rgb(26, 26, 26);
    text-align:center;
    padding-bottom: 4px;
}
a.active {
    border-bottom-color: rgb(230, 230, 230);
    border-bottom-style: solid;
    border-bottom-width: 2px;
    font-weight: 700;
}
a:hover {
    border-bottom-color: rgb(230, 230, 230);
    border-bottom-style: solid;
    border-bottom-width: 2px;
}

/* Custom default button */



/*
 * Base structure
 */

html,
body {
  height: 100%;
  background-color: rgb(252, 253, 247);
}

body {
  display: -ms-flexbox;
  display: flex;
  color:#222;
  font-family: "garamond-premier-pro-display";
}

.cover-container {
  /* max-width: 42em; */
}

.title {
  color:rgb(26, 26, 26);
  cursor:pointer;
  display:block;
  font-family:Lato;
  font-style:normal;
  font-weight:100;
  letter-spacing:normal;
  overflow-wrap:normal;
  text-align:center;
  text-decoration-color:rgb(26, 26, 26);
  text-decoration-line:none;
  text-decoration-style:solid;
  text-size-adjust:100%;
  text-transform:none;
}

/*
 * Header
 */
.masthead {
  margin-bottom: 2rem;
}

.masthead-brand {
  margin-top: 20px; 
  margin-bottom: 40px;
}

.nav-masthead .nav-link {
  padding: .25rem 0;
  /* font-weight: 700; */
  /* border-bottom: .25rem solid transparent; */
}

.nav {
    line-height: 22.4px;
}
.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  /* border-bottom-color: rgba(255, 255, 255, .25); */
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  /* color: #fff; */
  /* border-bottom-color: #fff; */
}


/*
 * Cover
 */
.cover {
  padding: 0 1.5rem;
}
.cover .btn-lg {
  padding: .75rem 1.25rem;
  /* font-weight: 700; */
}
.cover-heading {
    font-size:120px;
    height:120px;
    line-height:120px;
}

.cover-section {
  font-size:30px;
  /* height:40px;
  line-height:40px; */
  font-weight: 200;
  text-transform: uppercase;
  
}

p {
  font-family: Varela Round, arial, sans-serif;
  font-family: "Lato";
}

p.lead {
    font-family: Varela Round, arial, sans-serif;
    font-family: "Lato";
    text-transform: uppercase;
}

hr { margin-top: 40px; margin-bottom: 40px }


/*
 * Footer
 */
.mastfoot {
}

